[package]
name = "VersionManager"
version = "0.1.0"
authors = ["Miswanting <453542772@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "0.9.0"
toml = "0.5.1"
serde = { version = "1.0.97", features = ["derive"] }
