[package]
name = "version_manager"
version = "0.1.0"
authors = ["Miswanting <453542772@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "0.9.0"
serde = { version = "1.0.97", features = ["derive"] }
# serde = "1.0.97"
serde_yaml = "0.8.9"
serde_json = "1.0.40"